--- a/Javed Portfolio/portfolio.css
+++ b/Javed Portfolio/portfolio.css
@@ -22,30 +22,17 @@ a {
 }
 
 .header {
-    margin-top: 10px;
     bottom: 0%;
-    background: #000000;
-    height: 100px;
+    background: #000;
     width: 100%;
     color: white;
+    padding: 40px 0;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* position: fixed;
-    z-index: 1; */
-}
-
-.logo-side {
-    width: 300px;
-}
-
-.nav {
-    width: 800px;
-    display: flex;
-    justify-content: space-between;
 }
 
 .logo-side .image-brand {
@@ -66,7 +53,7 @@ a {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 28px;
     line-height: 29px;
     color: #fff;
 
@@ -79,7 +66,7 @@ a {
 .navbar .nav ul {
     display: flex;
     font-family: 'Montserrat';
-    gap: 50px;
+    gap: 60px;
     margin-top: 10px;
 }
 
@@ -87,7 +74,7 @@ a {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 20px;
     letter-spacing: -0.02em;
     color: #FFFFFF;
@@ -107,6 +94,7 @@ a {
     background: rgba(255, 255, 255, 0.2);
     border-radius: 6.61417px;
     cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.2);
 
 }
 
@@ -120,6 +108,11 @@ a {
     text-transform: uppercase;
     color: #FFFFFF;
     margin-top: 10px;
+}
+
+.navbar .cv-temp:hover {
+    border: 1px solid #FFBE00;
+    color: #FFBE00;
 }
 
 .header .nav ul li a.active,
@@ -195,13 +188,12 @@ a {
 
 
 .first-section {
-    position: relative;
-    top: 70px;
-    height: 110vh;
+    padding: 100px 0;
 }
 
 .designer-image {
     display: flex;
+    justify-content: space-between;
 }
 
 .desiger {
@@ -283,13 +275,6 @@ a {
     background: #000000;
 }
 
-.designer-image .desg-img {
-    /* background-image: url(images/desg.png);
-    background: #000000;
-    filter: blur(37px);
-    transform: rotate(30.84deg); */
-
-}
 
 .designer-image .desg-img img {
     width: 410px;
@@ -304,12 +289,11 @@ a {
 .follow-sites {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 .follow-sites h2 {
-    /* position: absolute; */
-    width: 92px;
-    height: 150px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -318,17 +302,15 @@ a {
     color: #EEEEEE;
     transform: rotate(90deg);
     position: relative;
-    bottom: 50px;
+    bottom: 20px;
 
 }
 
 .follow-sites span {
-    width: 222px;
-    height: 0px;
+    height: 100px;
     border: 1px solid #FFBE00;
-    transform: rotate(90deg);
     position: relative;
-    top: 60px;
+    width: 0px;
 }
 
 
